tests/ui/borrowck/mut-borrow-of-mut-ref.stderr
error[E0596]: cannot borrow `b` as mutable, as it is not declared as mutable
  --> $DIR/mut-borrow-of-mut-ref.rs:4:10
   |
LL | pub fn f(b: &mut i32) {
   |          ^ not mutable
...
LL |     h(&mut b);
   |       ------ cannot borrow as mutable
...
LL |     g(&mut &mut b);
   |            ------ cannot borrow as mutable
   |
note: the binding is already a mutable borrow
  --> $DIR/mut-borrow-of-mut-ref.rs:4:13
   |
LL | pub fn f(b: &mut i32) {
   |             ^^^^^^^^
help: consider making the binding mutable if you need to reborrow multiple times
   |
LL | pub fn f(mut b: &mut i32) {
   |          +++
help: if there is only one mutable reborrow, remove the `&mut`
   |
LL -     h(&mut b);
LL +     h(b);
   |
help: if there is only one mutable reborrow, remove the `&mut`
   |
LL -     g(&mut &mut b);
LL +     g(&mut b);
   |

error[E0596]: cannot borrow `b` as mutable, as it is not declared as mutable
  --> $DIR/mut-borrow-of-mut-ref.rs:19:12
   |
LL |     h(&mut &mut b);
   |            ^^^^^^ cannot borrow as mutable
   |
note: the binding is already a mutable borrow
  --> $DIR/mut-borrow-of-mut-ref.rs:17:13
   |
LL | pub fn g(b: &mut i32) {
   |             ^^^^^^^^
help: consider making the binding mutable if you need to reborrow multiple times
   |
LL | pub fn g(mut b: &mut i32) {
   |          +++
help: if there is only one mutable reborrow, remove the `&mut`
   |
LL -     h(&mut &mut b);
LL +     h(&mut b);
   |

error[E0596]: cannot borrow `f` as mutable, as it is not declared as mutable
  --> $DIR/mut-borrow-of-mut-ref.rs:36:5
   |
LL |     f.bar();
   |     ^ cannot borrow as mutable
   |
help: consider making the binding mutable
   |
LL | pub fn baz(mut f: &mut String) {
   |            +++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0596`.
